src/global/mixins/mixins_card.scss
// -----------------------------------------------------------------------------
// Card: Mixins & CSS variables
// -----------------------------------------------------------------------------

@mixin card-host-properties {
  --card-border-radius: #{pxToRem(var(--border-radius-8x))};
  --card-padding-top: 0;
  --card-padding-right: 0;
  --card-padding-bottom: 0;
  --card-padding-left: 0;
}

@mixin card {
  padding-block-start: var(--card-padding-top);
  padding-inline-end: var(--card-padding-right);
  padding-block-end: var(--card-padding-bottom);
  padding-inline-start: var(--card-padding-left);

  border-radius: var(--card-border-radius);
  background-color: var(--card-background-color);

  position: relative;
  overflow: hidden;
}

// Card appearance
@mixin card--primary {
  --card-background-color: var(--color-milk-default);
}

@mixin card--primary-negative {
  --card-background-color: var(--color-white-default);
}

// Card sizing
@mixin card--xs {
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-left');
  --card-padding-top: #{pxToRem(var(--spacing-fixed-3x))};
  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-3x))};
}

@mixin card--s {
  @include spacing-responsive-xxs('--card-padding-top');
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-bottom');
  @include spacing-responsive-xxs('--card-padding-left');
}

@mixin card--m {
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-left');
  --card-padding-top: #{pxToRem(var(--spacing-fixed-4x))};
  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
}

@mixin card--m--tall {
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-left');
  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
  --card-padding-bottom: #{pxToRem(var(--spacing-fixed-4x))};
}

@mixin card--l {
  @include spacing-responsive-xxs('--card-padding-top');
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-bottom');
  @include spacing-responsive-xxs('--card-padding-left');
}

@mixin card--l--tall  {
  @include spacing-responsive-xxs('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-bottom');
  @include spacing-responsive-xxs('--card-padding-left');
  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
}

@mixin card--xl {
  @include spacing-responsive-xxs('--card-padding-top');
  @include spacing-responsive-s('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-bottom');
  @include spacing-responsive-s('--card-padding-left');
}

@mixin card--xl--tall {
  @include spacing-responsive-s('--card-padding-right');
  @include spacing-responsive-xxs('--card-padding-bottom');
  @include spacing-responsive-s('--card-padding-left');
  --card-padding-top: #{pxToRem(var(--spacing-fixed-6x))};
}

@mixin card--xxl {
  @include spacing-responsive-s('--card-padding-top');
  @include spacing-responsive-s('--card-padding-right');
  @include spacing-responsive-s('--card-padding-bottom');
  @include spacing-responsive-s('--card-padding-left');
}

@mixin card--xxl--tall {
  @include card--xxl;
  // @include spacing-responsive-s('--card-padding-top');
  // @include spacing-responsive-s('--card-padding-right');
  // @include spacing-responsive-s('--card-padding-bottom');
  // @include spacing-responsive-s('--card-padding-left');
}

